--- a/package.json
+++ b/package.json
@@ -46,11 +46,15 @@
     "test": "node scripts/test.js --env=jsdom"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.1.6",
     "@types/jest": "^21.1.8",
     "@types/node": "^8.5.1",
     "@types/react": "^16.0.31",
     "@types/react-dom": "^16.0.3",
-    "electron": "1.7.9"
+    "electron": "1.7.9",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "react-addons-test-utils": "^15.6.2"
   },
   "jest": {
     "mapCoverage": true,
