--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "new-my-app",
   "version": "0.1.0",
-  "main": "main.js",
+  "main": "src/main.js",
   "private": true,
   "dependencies": {
     "autoprefixer": "7.1.2",
