--- a/package.json
+++ b/package.json
@@ -55,10 +55,12 @@
     "@types/node": "^8.5.1",
     "@types/react": "^16.0.31",
     "@types/react-dom": "^16.0.3",
+    "@types/sinon": "^4.1.2",
     "electron": "1.7.9",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "react-addons-test-utils": "^15.6.2"
+    "react-addons-test-utils": "^15.6.2",
+    "sinon": "^4.1.3"
   },
   "jest": {
     "mapCoverage": true,
