--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "popper.js": "^1.12.9",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
-    "pouchdb": "^6.4.1",
     "promise": "8.0.1",
     "react": "^16.2.0",
     "react-dev-utils": "^4.0.1",
@@ -54,11 +53,11 @@
     "@types/enzyme-adapter-react-16": "^1.0.1",
     "@types/jest": "^21.1.8",
     "@types/node": "^8.5.1",
-    "@types/pouchdb": "^6.3.2",
     "@types/react": "^16.0.31",
     "@types/react-dom": "^16.0.3",
     "@types/sinon": "^4.1.2",
     "electron": "1.7.9",
+    "electron-rebuild": "^1.6.0",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "react-addons-test-utils": "^15.6.2",
