--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,8 @@
     "noImplicitAny": true,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
+    "allowSyntheticDefaultImports": true,
     "noUnusedLocals": true,
-    "allowSyntheticDefaultImports": true
   },
   "exclude": [
     "node_modules",
