--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "jquery": "^3.2.1",
+    "nedb": "^1.8.0",
     "object-assign": "4.1.1",
     "popper.js": "^1.12.9",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -52,6 +53,7 @@
     "@types/enzyme": "^3.1.6",
     "@types/enzyme-adapter-react-16": "^1.0.1",
     "@types/jest": "^21.1.8",
+    "@types/nedb": "^1.8.5",
     "@types/node": "^8.5.1",
     "@types/react": "^16.0.31",
     "@types/react-dom": "^16.0.3",
