--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "file-loader": "0.11.2",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
-    "jest": "20.0.4",
+    "jest": "^22.0.4",
     "jquery": "^3.2.1",
     "nedb": "^1.8.0",
     "object-assign": "4.1.1",
@@ -32,7 +32,7 @@
     "source-map-loader": "^0.2.1",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
-    "ts-jest": "^20.0.7",
+    "ts-jest": "^22.0.0",
     "ts-loader": "^2.3.7",
     "tslint": "^5.7.0",
     "tslint-loader": "^3.5.3",
@@ -52,7 +52,7 @@
   "devDependencies": {
     "@types/enzyme": "^3.1.6",
     "@types/enzyme-adapter-react-16": "^1.0.1",
-    "@types/jest": "^21.1.8",
+    "@types/jest": "^22.0.0",
     "@types/nedb": "^1.8.5",
     "@types/node": "^8.5.1",
     "@types/react": "^16.0.31",
