--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-dev-utils": "^4.0.1",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "source-map-loader": "^0.2.1",
     "style-loader": "0.18.2",
@@ -57,6 +59,8 @@
     "@types/node": "^8.5.1",
     "@types/react": "^16.0.31",
     "@types/react-dom": "^16.0.3",
+    "@types/react-router": "^4.0.20",
+    "@types/react-router-dom": "^4.2.3",
     "@types/sinon": "^4.1.2",
     "electron": "1.7.9",
     "electron-rebuild": "^1.6.0",
