--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
     "promise": "8.0.1",
+    "quill": "^1.3.4",
     "react": "^16.2.0",
     "react-dev-utils": "^4.0.1",
     "react-dom": "^16.2.0",
@@ -57,6 +58,7 @@
     "@types/jest": "^22.0.0",
     "@types/nedb": "^1.8.5",
     "@types/node": "^8.5.1",
+    "@types/quill": "^1.3.5",
     "@types/react": "^16.0.31",
     "@types/react-dom": "^16.0.3",
     "@types/react-router": "^4.0.20",
