--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "electron-store": "^1.3.0",
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "0.11.2",
-    "fs-extra": "3.0.1",
+    "fs-extra": "^3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "^22.0.4",
     "jquery": "^3.2.1",
