--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "source-map-loader": "^0.2.1",
+    "striptags": "^3.1.1",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
     "ts-jest": "^22.0.0",
