--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/enzyme": "^3.1.6",
     "@types/enzyme-adapter-react-16": "^1.0.1",
     "@types/jest": "^22.0.0",
+    "@types/jquery": "^3.2.18",
     "@types/nedb": "^1.8.5",
     "@types/node": "^8.5.1",
     "@types/quill": "^1.3.5",
