--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,10 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 TODO.md
+.env
