--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "tslint-react": "^3.2.0",
     "typescript": "~2.5.3",
     "url-loader": "0.5.9",
+    "uuid": "^3.2.1",
     "webpack": "3.5.1",
     "webpack-dev-server": "2.7.1",
     "webpack-manifest-plugin": "1.2.1",
