--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.0.0-beta.2",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "cheerio": "^1.0.0-rc.2",
     "css-loader": "0.28.4",
     "dotenv": "4.0.0",
     "electron-store": "^1.3.0",
@@ -66,6 +67,7 @@
     }
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.7",
     "@types/enzyme": "^3.1.6",
     "@types/enzyme-adapter-react-16": "^1.0.1",
     "@types/jest": "^22.0.0",
