--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "new-my-app",
+  "name": "monte-note",
+  "productName": "MonteNote",
   "version": "0.1.0",
   "main": "src/main.js",
   "private": true,
@@ -13,6 +14,7 @@
     "css-loader": "0.28.4",
     "dotenv": "4.0.0",
     "electron-store": "^1.3.0",
+    "electron-is-dev": "^0.3.0",
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "0.11.2",
     "fs-extra": "^3.0.1",
@@ -20,6 +22,7 @@
     "jest": "^22.0.4",
     "jquery": "^3.2.1",
     "nedb": "^1.8.0",
+    "npm": "^5.4.0",
     "object-assign": "4.1.1",
     "popper.js": "^1.12.9",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -81,7 +84,6 @@
     "@types/react-router-dom": "^4.2.3",
     "@types/sinon": "^4.1.2",
     "electron": "1.7.9",
-    "electron-is-dev": "^0.3.0",
     "electron-rebuild": "^1.6.0",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.1",
