Add package commands for windows and linux

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "jest": "^22.0.4",
     "jquery": "^3.2.1",
     "nedb": "^1.8.0",
-    "npm": "^5.4.0",
+    "npm": "5.6.0",
     "object-assign": "4.1.1",
     "popper.js": "^1.12.9",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -57,7 +57,9 @@
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
     "electron-pack": "npm run build --em.main=build/main.js",
-    "electron-prod": "node_modules\\.bin\\electron.cmd ."
+    "electron-start": "node_modules/.bin/electron .",
+    "package-win": "electron-packager . --icon=src/assets/icons/win/icon.ico --asar --platform=win32 --overwrite=true",
+    "package-linux": "electron-packager . --icon=src/assets/icons/png/256x256.png --asar --platform=linux --arch=x64 --overwrite=true"
   },
   "build": {
     "appId": "com.example.electron-cra",
