--- a/debian.config.json
+++ b/debian.config.json
@@ -7,7 +7,8 @@
       "48x48": "./src/assets/icons/png/48x48.png",
       "64x64": "./src/assets/icons/png/64x64.png",
       "128x128": "./src/assets/icons/png/128x128.png",
-      "256x256": "./src/assets/icons/png/256x256.png"
+      "256x256": "./src/assets/icons/png/256x256.png",
+      "scalable": "./src/assets/logo-src/MonteNote-Logo.svg"
     }
   }
   
