Use relative path to link ts config file

--- a/package.json
+++ b/package.json
@@ -135,7 +135,7 @@
     ],
     "globals": {
       "ts-jest": {
-        "tsConfigFile": "C:\\Users\\seneca\\Documents\\DEVELOPMENT\\new-my-app\\tsconfig.test.json"
+        "tsConfigFile": "tsconfig.test.json"
       }
     }
   },
