--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "cheerio": "^1.0.0-rc.2",
     "css-loader": "0.28.4",
     "dotenv": "4.0.0",
-    "electron-store": "^1.3.0",
     "electron-is-dev": "^0.3.0",
+    "electron-store": "^1.3.0",
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "0.11.2",
     "fs-extra": "^3.0.1",
@@ -36,6 +36,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "sanitize-filename": "^1.6.1",
     "source-map-loader": "^0.2.1",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
